@@ -1,14 +1,17 @@
-package org.example;
+package org.example.join;
 
+
+import org.example.join.join.DataRow;
+import org.example.join.join.JoinedDataRow;
 import org.junit.jupiter.params.provider.Arguments;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
-public class RightJoinOperationDataRowArguments {
+class InnerJoinOperationDataRowArguments {
 
-    static Stream<Arguments> provideEmptyRightCollection() {
+    static Stream<Arguments> provideCollection() {
         return Stream.of(
                 Arguments.of(
                         Arrays.asList(
@@ -19,26 +22,9 @@ public class RightJoinOperationDataRowArguments {
                 ),
                 Arguments.of(
                         Arrays.asList(
-                                new DataRow<>(3, "Budapest"),
-                                new DataRow<>(4, "Riga"),
-                                new DataRow<>(5, "Tokyo")
-                        )
-                )
-        );
-    }
-
-    static Stream<Arguments> provideEmptyLeftCollection() {
-        return Stream.of(
-                Arguments.of(
-                        Arrays.asList(
-                                new DataRow<>(0, "Ukraine"),
-                                new DataRow<>(1, "Germany"),
-                                new DataRow<>(2, "France")
-                        ),
-                        Arrays.asList(
-                                new JoinedDataRow<>(0, null, "Ukraine"),
-                                new JoinedDataRow<>(1, null, "Germany"),
-                                new JoinedDataRow<>(2, null, "France")
+                                new DataRow<>(0, "Kyiv"),
+                                new DataRow<>(1, "Berlin"),
+                                new DataRow<>(3, "Budapest")
                         )
                 )
         );
@@ -56,11 +42,6 @@ public class RightJoinOperationDataRowArguments {
                                 new DataRow<>(3, "Budapest"),
                                 new DataRow<>(4, "Riga"),
                                 new DataRow<>(5, "Tokyo")
-                        ),
-                        Arrays.asList(
-                                new JoinedDataRow<>(3, null, "Budapest"),
-                                new JoinedDataRow<>(4, null, "Riga"),
-                                new JoinedDataRow<>(5, null, "Tokyo")
                         )
                 )
         );
@@ -81,8 +62,7 @@ public class RightJoinOperationDataRowArguments {
                         ),
                         Arrays.asList(
                                 new JoinedDataRow<>(0, "Ukraine", "Kyiv"),
-                                new JoinedDataRow<>(1, "Germany", "Berlin"),
-                                new JoinedDataRow<>(3, null, "Budapest")
+                                new JoinedDataRow<>(1, "Germany", "Berlin")
                         )
                 )
         );
@@ -113,7 +93,7 @@ public class RightJoinOperationDataRowArguments {
     static Stream<Arguments> provideLeftSizeSmallerThenRightSizeCollections() {
         return Stream.of(
                 Arguments.of(
-                        Arrays.asList(
+                        List.of(
                                 new DataRow<>(0, "Ukraine")
                         ),
                         Arrays.asList(
@@ -122,9 +102,7 @@ public class RightJoinOperationDataRowArguments {
                                 new DataRow<>(3, "Budapest")
                         ),
                         Arrays.asList(
-                                new JoinedDataRow<>(0, "Ukraine", "Kyiv"),
-                                new JoinedDataRow<>(1, null, "Berlin"),
-                                new JoinedDataRow<>(3, null, "Budapest")
+                                new JoinedDataRow<>(0, "Ukraine", "Kyiv")
                         )
                 )
         );
@@ -163,10 +141,10 @@ public class RightJoinOperationDataRowArguments {
                         ),
                         Arrays.asList(
                                 new JoinedDataRow<>(0, "Ukraine", "Kyiv"),
-                                new JoinedDataRow<>(1, "Germany", "Berlin"),
-                                new JoinedDataRow<>(3, null, "Budapest")
+                                new JoinedDataRow<>(1, "Germany", "Berlin")
                         )
                 )
         );
     }
+
 }
