@@ -1,15 +1,15 @@
-package org.example;
+package org.example.join;
 
-
+import org.example.join.join.DataRow;
+import org.example.join.join.JoinedDataRow;
 import org.junit.jupiter.params.provider.Arguments;
 
 import java.util.Arrays;
-import java.util.List;
 import java.util.stream.Stream;
 
-class InnerJoinOperationDataRowArguments {
+public class RightJoinOperationDataRowArguments {
 
-    static Stream<Arguments> provideCollection() {
+    static Stream<Arguments> provideEmptyRightCollection() {
         return Stream.of(
                 Arguments.of(
                         Arrays.asList(
@@ -20,9 +20,26 @@ class InnerJoinOperationDataRowArguments {
                 ),
                 Arguments.of(
                         Arrays.asList(
-                                new DataRow<>(0, "Kyiv"),
-                                new DataRow<>(1, "Berlin"),
-                                new DataRow<>(3, "Budapest")
+                                new DataRow<>(3, "Budapest"),
+                                new DataRow<>(4, "Riga"),
+                                new DataRow<>(5, "Tokyo")
+                        )
+                )
+        );
+    }
+
+    static Stream<Arguments> provideEmptyLeftCollection() {
+        return Stream.of(
+                Arguments.of(
+                        Arrays.asList(
+                                new DataRow<>(0, "Ukraine"),
+                                new DataRow<>(1, "Germany"),
+                                new DataRow<>(2, "France")
+                        ),
+                        Arrays.asList(
+                                new JoinedDataRow<>(0, null, "Ukraine"),
+                                new JoinedDataRow<>(1, null, "Germany"),
+                                new JoinedDataRow<>(2, null, "France")
                         )
                 )
         );
@@ -40,6 +57,11 @@ class InnerJoinOperationDataRowArguments {
                                 new DataRow<>(3, "Budapest"),
                                 new DataRow<>(4, "Riga"),
                                 new DataRow<>(5, "Tokyo")
+                        ),
+                        Arrays.asList(
+                                new JoinedDataRow<>(3, null, "Budapest"),
+                                new JoinedDataRow<>(4, null, "Riga"),
+                                new JoinedDataRow<>(5, null, "Tokyo")
                         )
                 )
         );
@@ -60,7 +82,8 @@ class InnerJoinOperationDataRowArguments {
                         ),
                         Arrays.asList(
                                 new JoinedDataRow<>(0, "Ukraine", "Kyiv"),
-                                new JoinedDataRow<>(1, "Germany", "Berlin")
+                                new JoinedDataRow<>(1, "Germany", "Berlin"),
+                                new JoinedDataRow<>(3, null, "Budapest")
                         )
                 )
         );
@@ -91,7 +114,7 @@ class InnerJoinOperationDataRowArguments {
     static Stream<Arguments> provideLeftSizeSmallerThenRightSizeCollections() {
         return Stream.of(
                 Arguments.of(
-                        List.of(
+                        Arrays.asList(
                                 new DataRow<>(0, "Ukraine")
                         ),
                         Arrays.asList(
@@ -100,7 +123,9 @@ class InnerJoinOperationDataRowArguments {
                                 new DataRow<>(3, "Budapest")
                         ),
                         Arrays.asList(
-                                new JoinedDataRow<>(0, "Ukraine", "Kyiv")
+                                new JoinedDataRow<>(0, "Ukraine", "Kyiv"),
+                                new JoinedDataRow<>(1, null, "Berlin"),
+                                new JoinedDataRow<>(3, null, "Budapest")
                         )
                 )
         );
@@ -139,10 +164,10 @@ class InnerJoinOperationDataRowArguments {
                         ),
                         Arrays.asList(
                                 new JoinedDataRow<>(0, "Ukraine", "Kyiv"),
-                                new JoinedDataRow<>(1, "Germany", "Berlin")
+                                new JoinedDataRow<>(1, "Germany", "Berlin"),
+                                new JoinedDataRow<>(3, null, "Budapest")
                         )
                 )
         );
     }
-
 }
